--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/css/bootstrap-select.min.css"
+		integrity="sha512-mR/b5Y7FRsKqrYZou7uysnOdCIJib/7r5QeJMFvLNHNhtye3xJp1TdJVPLtetkukFn227nKpXD9OjUc09lx97Q=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/x-icon" href="./assests/pms-fav.png">
 	<title>
@@ -252,7 +256,70 @@
 						<div class="row row-cols-1 justify-content-center">
 
 							<h4 class="my-4">E-prescription</h4>
-
+							<section class="mb-4">
+								<div class="row">
+									<div class="col-2">
+										<p>Select Symptoms:</p>
+									</div>
+									<div class="col-2">
+										<div class="container">
+											<select class="selectpicker" multiple aria-label="size 3 select example">
+												<option value="1">One</option>
+												<option value="2">Two</option>
+												<option value="3">Three</option>
+												<option value="4">Four</option>
+												<option value="1">One</option>
+												<option value="2">Two</option>
+												<option value="3">Three</option>
+												<option value="4">Four</option>
+											</select>
+										</div>
+										<!-- <div class="btn-group">
+										<button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+										  Select multiple
+										</button>
+										<ul class="dropdown-menu dropdown-menu-end">
+										  <li><button class="dropdown-item" type="button">Action</button></li>
+										  <li><button class="dropdown-item" type="button">Another action</button></li>
+										  <li><button class="dropdown-item" type="button">Something else here</button></li>
+										</ul>
+									  </div> -->
+									</div>
+								</div>
+								<hr/>
+								<h4  class=" my-4">Recommendation:</h4>
+								<div class=" my-2">
+									<table class="table">
+										<thead>
+											<tr>
+												<th scope="col">#</th>
+												<th scope="col">First</th>
+												<th scope="col">Last</th>
+												<th scope="col">Handle</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<th scope="row">1</th>
+												<td>Mark</td>
+												<td>Otto</td>
+												<td>@mdo</td>
+											</tr>
+											<tr>
+												<th scope="row">2</th>
+												<td>Jacob</td>
+												<td>Thornton</td>
+												<td>@fat</td>
+											</tr>
+											<tr>
+												<th scope="row">3</th>
+												<td colspan="2">Larry the Bird</td>
+												<td>@twitter</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</section>
 
 
 						</div>
@@ -389,7 +456,6 @@
 
 						</div>
 					</div>
-
 				</div>
 			</article>
 
@@ -399,14 +465,20 @@
 				© 2022 Copyright:
 				<a class="text-light" href="#">Pharmacysupport.com</a>
 			</div>
-			<!-- Copyright -->
 		</footer>
 
 	</main>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
 		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"
+		integrity="sha512-FHZVRMUW9FsXobt+ONiix6Z0tIkxvQfxtCSirkKc5Sb4TKHmqq1dZa8DphF0XqKb3ldLu/wgMa8mT6uXiLlRlw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
 	</script>
 	<script src="script.js"></script>
