diagnosis button working

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
 
 									</div>
 									<div class="col text-end align-self-end" style="padding-right:0px">
-										<button type="button" class="btn btn-primary" data-bs-toggle="modal"
-											data-bs-target="#exampleModal">
+										<button type="button" class="btn btn-primary" id="diagnosis"
+											>
 											Diagnosis
 										</button>
 									</div>
@@ -416,7 +416,7 @@
 								</div>
 								<hr />
 								<h4 class=" my-4">Rx:</h4>
-								<div class="table-responsive  my-2">
+								<div id="diagnosisTable" class="table-responsive  my-2" style="display:none;">
 									<table class="table">
 										<thead>
 											<tr>
