removing comment and spaces

--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
 							<div class="row row-cols-1 justify-content-center">
 								<section class="my-1">
 									<div class="row">
-
-										<!-- Earnings (Monthly) Card Example -->
 										<div class="col-6 col-xl-3 col-md-6 mb-4">
 											<div class="card border-left-primary shadow h-100 py-2">
 												<div class="card-body">
@@ -107,8 +105,6 @@
 												</div>
 											</div>
 										</div>
-
-										<!-- Earnings (Monthly) Card Example -->
 										<div class="col-6  col-xl-3 col-md-6 mb-4">
 											<div class="card border-left-success shadow h-100 py-2">
 												<div class="card-body">
@@ -127,8 +123,6 @@
 												</div>
 											</div>
 										</div>
-
-										<!-- Earnings (Monthly) Card Example -->
 										<div class="col-6 col-xl-3 col-md-6 mb-4">
 											<div class="card border-left-info shadow h-100 py-2">
 												<div class="card-body">
@@ -162,7 +156,6 @@
 											</div>
 										</div>
 
-										<!-- Pending Requests Card Example -->
 										<div class="col-6  col-xl-3 col-md-6 mb-4">
 											<div class="card border-left-warning shadow h-100 py-2">
 												<div class="card-body">
@@ -213,9 +206,6 @@
 									</div>
 								</section>
 								<canvas class="my-4 w-100" id="myChart2" width="900" height="380"></canvas>
-
-
-
 							</div>
 						</div>
 					</div>
@@ -321,11 +311,7 @@
 
 																<button type="submit"
 																	class="btn btn-primary">Submit</button>
-																<!-- <button type="button" class="btn btn-primary">Save
-																		changes</button> -->
 															</div>
-															<!-- <button type="submit"
-																	class="btn btn-primary">Submit</button> -->
 														</form>
 													</div>
 												</div>
@@ -369,8 +355,7 @@
 
 									</div>
 									<div class="col text-end align-self-end" style="padding-right:0px">
-										<button type="button" class="btn btn-primary" id="diagnosis"
-											>
+										<button type="button" class="btn btn-primary" id="diagnosis">
 											Diagnosis
 										</button>
 									</div>
@@ -475,11 +460,6 @@
 											<tbody></tbody>
 										</table>
 									</div>
-									<!-- <div class="row">
-										<div class="col-3" style="color:lightgray">Showing 1-1 entries</div>
-										
-
-									</div> -->
 								</section>
 								<hr />
 
