--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta
+		name="The main purpose of this project is to showcase the management and analysis of pharmaceutical shop and sale of sale of drugs which is in stock. This project’s end user shall be pharmacist and medical store owners. This project is designed and coded to show the capability of features by using above mentioned technology rather than the actual real-world usage. ">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet"
@@ -217,8 +219,9 @@
 										<h4 class="my-2">Drug inventory &nbsp;<i
 												class="fas fa-clipboard-list fa-1x text-gray-300"></i></h4>
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" style="width: 50%"
-												aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50% Strength
+											<div class="progress-bar" role="progressbar"
+												style="width: 50%;font-size:smaller" aria-valuenow="50"
+												aria-valuemin="0" aria-valuemax="100">50% Strength
 											</div>
 										</div>
 									</div>
@@ -314,6 +317,18 @@
 															</div>
 														</form>
 													</div>
+												</div>
+											</div>
+										</div>
+										<div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+											<div class="toast align-items-center" role="alert" aria-live="assertive"
+												aria-atomic="true">
+												<div class="d-flex">
+													<div class="toast-body">
+														New Drug added to the inventory.
+													</div>
+													<button type="button" class="btn-close me-2 m-auto"
+														data-bs-dismiss="toast" aria-label="Close"></button>
 												</div>
 											</div>
 										</div>
@@ -477,7 +492,7 @@
 											<div id="collapseOne" class="accordion-collapse collapse show"
 												aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
-													<canvas id="myChart" style="width:100%;max-width:400px"></canvas>
+													<canvas id="myChart" style="width:100%;max-width:500px"></canvas>
 
 												</div>
 											</div>
@@ -493,7 +508,7 @@
 											<div id="collapseTwo" class="accordion-collapse collapse"
 												aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
-													<canvas id="myChart1" style="width:100%;max-width:400px"></canvas>
+													<canvas id="myChart1" style="width:100%;max-width:500px"></canvas>
 												</div>
 											</div>
 										</div>
