--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="drug-inventory" role="tabpanel" class="tab-pane  ">
+					<div id="drug-inventory" role="tabpanel" class="tab-pane">
 						<div class="container-fluid">
 							<div class="row row-cols-1 justify-content-start">
 								<div class="row justify-content-start align-self-start" style="padding-right:0px">
@@ -275,7 +275,7 @@
 																	<div class="form-check">
 																		<input class="form-check-input" type="radio"
 																			name="gridRadios" id="gridRadios1"
-																			value="Small molecule" checked>
+																			value="Small molecule">
 																		<label class="form-check-label"
 																			for="gridRadios1">
 																			Small molecule
@@ -362,7 +362,7 @@
 					</div>
 					<div id="e-prescription" role="tabpanel" class="tab-pane">
 						<div class="container-fluid">
-							<div class="row row-cols-1 justify-content-center">
+							<div class="row row-cols-1 justify-content-start">
 								<div class="row justify-content-start align-self-start" style="padding-right:0px">
 									<div class="col-4">
 										<h4 class="my-2">E-prescription &nbsp;<i
@@ -541,7 +541,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 	<script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
-	<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js" defer></script>
 	<script src="script.js"></script>
 
 </body>
